# neos

./: .gitignore  .gitmodules  CMakeLists.txt
boot/: CMakeLists.txt
boot/boot/: CMakeLists.txt  boot.asm  bootmain.c
boot/ext2boot/: CMakeLists.txt  bootsec.S  bootsec.ld  utils.S
boot/loader/: CMakeLists.txt  disk.c  draw.c  entry.c  ext2.c  fs.c  loader.c  loader.ld  loaderhead.S  mem.c  terminal.c  utils.c  vesa.c  vesa16.c  vgafont.c
boot/loader/include/: asm.h  defs.h  disk.h  draw.h  entry.h  ext2.h  fs.h  mem.h  mmu.h  terminal.h  utils.h  vesa.h  vga.h  vgafont.h
boot/loader64/: CMakeLists.txt  acpi.c  disk.c  draw.c  elf.c  entry64.c  ext2.c  fs.c  head64.S  loader.c  loader64.ld  log.c  mem.c  pcie.c  terminal.c  utils.c
boot/loader64/acpi/: CMakeLists.txt  host.c  string.c
boot/loader64/acpi/include/: stdarg.h  stddef.h  stdint.h
boot/loader64/include/: acpi.h  defs.h  disk.h  draw.h  elf.h  ext2.h  fs.h  loader.h  log.h  mem.h  param.h  terminal.h  utils.h  x86.h
hal/: CMakeLists.txt
hal/x8664/: CMakeLists.txt  hal.ld  halmain.c  ops.c
hal/x8664/include/: defs.h  halops.h
include/: error.h  ext.h  type.h
include/arch/: x86.h
include/boot/: acpi.h  color.h  defs.h  elf.h  ext2.h  fs.h  mem.h  mmu.h  param.h  vbe.h  vgafont.h
include/hal/: hal.h  halops.h
include/kernel/mm/: pmm.h
kernel/: CMakeLists.txt  kernel.ld  kernhead.S  kernmain.c
kernel/include/: defs.h
libs/: CMakeLists.txt
scripts/: boot.ini  mkdisk.old.sh  mkdisk.sh  start-debug.sh  start.sh
